syntax = "proto3";

message InstallRequest {
    bytes elf = 1;
}

message InstallReply {}
